# mrrc-testbed

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  formal-methods-for-verification-proposal.md  formal-methods-implementation-plan.md  formal-methods-verification-strategy.md  justfile  pyproject.toml  testbed-proposal.md
.beads/: .gitignore  issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
crates/mrrc_testbed/: Cargo.toml
data/: README.md
data/regressions/: README.md  crash_0001.mrc  manifest.json
data/synthetic/: README.md
hooks/: post-merge  pre-commit  pre-push
scripts/: check_known_failures.py  curate_fixtures.py  curate_from_sru.py  download_datasets.py  extract_record.py  import_regression.py  import_run.py  promote_discovery.py  report_issue.py  set_mrrc_source.py  validate_fixtures.py  validate_regressions.py
src/mrrc_testbed/: __init__.py  compare.py  config.py  datasets.py  download.py  state.py
state/: known-failures.yaml
state/discoveries/: disc-2026-02-27-001.yaml  disc-ia-20260226-0001.yaml  disc-ia-20260226-0002.yaml  disc-ia-20260226-0003.yaml  disc-ia-20260226-0004.yaml  disc-ia-20260226-0005.yaml  disc-ia-20260226-0006.yaml  disc-ia-20260226-0007.yaml  disc-ia-20260226-0008.yaml  disc-ia-20260226-0009.yaml  disc-ia-20260226-0010.yaml  disc-ia-20260226-0011.yaml  disc-ia-20260226-0012.yaml  disc-ia-20260226-0013.yaml  disc-ia-20260226-0014.yaml  disc-ia-20260226-0015.yaml  disc-ia-20260226-0016.yaml  disc-ia-20260226-0017.yaml  (+216 more)
suites/: conftest.py  test_compare.py
(+275 files in other folders)
