[project]
name = "mrrc-testbed"
version = "0.1.0"
description = "Test harness for exercising mrrc against real-world MARC data at scale"
requires-python = ">=3.13"
dependencies = []

# [project.optional-dependencies]
# mrrc = ["mrrc @ git+https://github.com/dchud/mrrc@v0.6.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "python-dotenv>=1",
    "pyyaml>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mrrc_testbed"]

[tool.pytest.ini_options]
testpaths = ["suites"]
markers = [
    "local: marks tests requiring local-mode datasets (deselect with '-m \"not local\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
